--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe - Full Stack Developer Portfolio</title>
+    <title>Ratnadeep Saha - Full Stack Developer Portfolio</title>
     <meta name="description" content="Full Stack Developer specializing in React, Node.js, and modern web technologies. Creating beautiful, functional digital experiences.">
   </head>
   <body>
